--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -8,7 +8,7 @@ SEASIDE_ADDRESS=127.0.0.1
 # Seaside external IP address, VPN requests will be forwarded from it
 SEASIDE_EXTERNAL=127.0.0.1
 # Seaside control port for viridian encrypted TCP control packets (any, tailed)
-SEASIDE_CTRLPORT=8587
+SEASIDE_API_PORT=8587
 
 # Path for storing logs, two files will be created there: "danger.log" and "safe.log"
 SEASIDE_CERTIFICATE_PATH=certificates
@@ -20,13 +20,6 @@ SEASIDE_MAX_VIRIDIANS=10
 # Maximum privileged viridian number (should be >= 0)
 SEASIDE_MAX_ADMINS=5
 # Maximum total viridian number will be calculated as sum of the previous values
-
-# Maximum additional waiting time for healthcheck message (will be added to the 'nextIn' value)
-SEASIDE_WAITING_OVERTIME=15
-# Maximum waiting time for the first healthcheck message
-SEASIDE_FIRST_HEALTHCHECK_DELAY=3
-# Maximum waiting time between helathchecks, the delay before a viridian is disconnected (in seconds)
-SEASIDE_MAXIMUM_NEXTIN=15
 
 # VPN tunnel interface MTU, if <= 0 then tunnel MTU will match external IP interface MTU
 SEASIDE_TUNNEL_MTU=1500
