--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -69,6 +69,8 @@ runs:
       run: |
         echo "server-ip=$(${{ env.SUDO }} node actions/setup-server/configure_viridian_test.mjs -t ${{ steps.resolve-target.outputs.target-ip }} -s)" >> $GITHUB_OUTPUT
         wsl -u root ss -tulpn
+        wsl -u root ls .
+        wsl -u root cat ./conf.env
         wsl -u root sh -c "set -a && . ./conf.env && sudo ./whirlpool.run"
 
     - name: Get Connection Link
