windivert dwnloading added

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,7 @@ viridian/reef/src/generated
 
 ## Test files:
 viridian/reef/certificates/
+
+## External dependencies:
+viridian/reef/WinDivert-*.zip
+viridian/reef/windivert_binaries/
