--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -37,9 +37,13 @@ tun = { version = "^0.7.1", features = ["async"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 serde = "^1.0.219"
-windivert = { version = "^0.6.0", features = ["static"] }
+windivert = "^0.6.0"
 windows = { version = "^0.58.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
 wmi = "^0.17.2"
+
+[target.'cfg(target_os = "windows")'.build-dependencies]
+reqwest = { version = "^0.12.20", features = ["blocking", "json"] }
+zip = "^4.1.0"
 
 [dev-dependencies]
 regex = "^1.11.1"
