--- a/viridian/reef/Makefile
+++ b/viridian/reef/Makefile
@@ -11,6 +11,8 @@ GREEN=\033[32m
 YELLOW=\033[33m
 RESET=\033[0m
 
+WINDIVERT_VERSION = 2.2.2
+WINDIVERT_VENDOR = windivert-bin
 
 
 help:
@@ -20,7 +22,16 @@ help:
 
 
 
-build:
+dependencies:
+	@ # Dowload and unpack windivert distribution
+	export WNDIVERT_ARCHIVE=WinDivert-${WINDIVERT_VERSION}-A.zip
+	export WNDIVERT_URL=https://github.com/basil00/WinDivert/releases/download/v${WINDIVERT_VERSION}/${WNDIVERT_ARCHIVE}
+	curl -L -o $(WNDIVERT_ARCHIVE) $(WNDIVERT_URL)
+	mkdir -p $(WINDIVERT_VENDOR)
+	unzip -o $(WNDIVERT_ARCHIVE) -d $(WINDIVERT_VENDOR)
+.PHONY: dependencies
+
+build: dependencies
 	@ # Build reef locally TODO: add feature strict, checking warnings, docs, removing debug info
 	cargo build --all-features
 .PHONY: build
