--- a/viridian/reef/.cargo/config.toml
+++ b/viridian/reef/.cargo/config.toml
@@ -1,2 +1,2 @@
 [env]
-WINDIVERT_PATH = { value = "windivert_binaries/x64", relative = true }
+WINDIVERT_PATH = { value = "windivert-bin/x64", relative = true }
