--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ viridian/reef/certificates/
 ## External dependencies:
 viridian/reef/WinDivert-*.zip
 viridian/reef/windivert-bin/
+viridian/reef/windivert-source/
