--- a/viridian/reef/Makefile
+++ b/viridian/reef/Makefile
@@ -12,7 +12,7 @@ YELLOW=\033[33m
 RESET=\033[0m
 
 WINDIVERT_VERSION=2.2.2
-WINDIVERT_VENDOR=windivert-bin
+WINDIVERT_PATH=windivert-bin
 
 WINDIVERT_TEMP=windivert-source
 WINDIVERT_SOURCE=WinDivert-$(WINDIVERT_VERSION)-A
@@ -34,8 +34,8 @@ ifeq ($(OS),Windows_NT)
 	curl -sSL -o $(WINDIVERT_SOURCE).zip $(WNDIVERT_URL)
 	mkdir -p $(WINDIVERT_TEMP)
 	unzip -q -o $(WINDIVERT_SOURCE).zip -d $(WINDIVERT_TEMP)
-	mkdir -p $(WINDIVERT_VENDOR)
-	mv $(WINDIVERT_TEMP)/$(WINDIVERT_SOURCE)/$(SYS_ARCH)/* $(WINDIVERT_VENDOR)/
+	mkdir -p $(WINDIVERT_PATH)
+	mv $(WINDIVERT_TEMP)/$(WINDIVERT_SOURCE)/$(SYS_ARCH)/* $(WINDIVERT_PATH)/
 	rm -rf $(WINDIVERT_TEMP)
 endif
 .PHONY: dependencies
