--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -135,6 +135,7 @@ jobs:
         shell: bash
         run: |
           wsl -u root ss -tulnp
+          wsl -u root sh -c "journalctl | grep 'seaside-whirlpool'"
           wsl -u root ls .
           wsl -u root cat log/safe.log
           wsl -u root cat log/danger.log
