--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,13 +115,6 @@ jobs:
           target: ${{ env.TARGET_ADDRESS }}
           test-command: ${{ env.TEST }}
 
-      - name: Test Viridian Reef PORT (integration) 🧪
-        id: test-viridian-reef-port
-        working-directory: viridian/reef
-        env:
-          WINDIVERT_PATH: ${{ github.workspace }}/viridian/reef/windivert-bin
-        run: ${{ env.SUDO }} cargo run --features cli-exec --bin cli -- -s port -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-addresses ${{ env.TARGET_ADDRESS }} -e "${{ env.TEST }}"
-
       - name: Test Viridian Reef TYPHOON (integration) 🧪
         id: test-viridian-reef-typhoon
         working-directory: viridian/reef
@@ -129,16 +122,17 @@ jobs:
           WINDIVERT_PATH: ${{ github.workspace }}/viridian/reef/windivert-bin
         run: ${{ env.SUDO }} cargo run --features cli-exec --bin cli -- -s typhoon -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-addresses ${{ env.TARGET_ADDRESS }} -e "${{ env.TEST }}"
 
+      - name: Test Viridian Reef PORT (integration) 🧪
+        id: test-viridian-reef-port
+        working-directory: viridian/reef
+        env:
+          WINDIVERT_PATH: ${{ github.workspace }}/viridian/reef/windivert-bin
+        run: ${{ env.SUDO }} cargo run --features cli-exec --bin cli -- -s port -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-addresses ${{ env.TARGET_ADDRESS }} -e "${{ env.TEST }}"
+
       - name: TEST STEP  # TODO: remove!
         if: runner.os == 'Windows' && failure()
-        working-directory: .github
         shell: bash
-        run: |
-          wsl -u root ss -tulnp
-          wsl -u root grep "seaside-whirlpool" /var/log/syslog
-          wsl -u root ls .
-          wsl -u root cat log/safe.log
-          wsl -u root cat log/danger.log
+        run: wsl -u root ss -tulnp
 
   caerulean-whirlpool-test:
     name: Test Caerulean Whirlpool
