--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,6 +115,13 @@ jobs:
           target: ${{ env.TARGET_ADDRESS }}
           test-command: ${{ env.TEST }}
 
+      - name: TEST STEP  # TODO: remove!
+        if: runner.os == 'Windows' && failure()
+        shell: bash
+        run: |
+          powershell -Command "Invoke-WebRequest -Uri https://1.1.1.1 -Method Head -TimeoutSec 15 -ErrorAction Stop"
+          wsl -u root bash -c "curl -sS -I --fail --max-time 15 https://1.1.1.1"
+
       - name: Test Viridian Reef PORT (integration) 🧪
         id: test-viridian-reef-port
         working-directory: viridian/reef
@@ -133,9 +140,14 @@ jobs:
         if: runner.os == 'Windows' && failure()
         shell: bash
         run: |
+          wsl -u root echo "LOCAL IP ADDRESSES:"
           ipconfig
+          wsl -u root echo "PROCESSES AND PORTS:"
           wsl -u root ss -tulnp
-          wsl -u root find . -type f -name "danger.log"
+          wsl -u root echo "SAFE LOGS:"
+          wsl -u root cat ./.github/log/safe.log
+          wsl -u root echo "DANGER LOGS:"
+          wsl -u root cat ./.github/log/danger.log
 
   caerulean-whirlpool-test:
     name: Test Caerulean Whirlpool
