--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -119,8 +119,8 @@ jobs:
         if: runner.os == 'Windows'
         shell: bash
         run: |
-          powershell -Command "Invoke-WebRequest -Uri https://1.1.1.1 -Method Head -TimeoutSec 15 -ErrorAction SilentlyContinue"
-          wsl -u root bash -c "curl -sS -I --fail --max-time 15 https://1.1.1.1"
+          powershell -Command "try { Invoke-WebRequest -Uri https://1.1.1.1 -Method Head -TimeoutSec 15 -ErrorAction Stop } catch { Write-Host 'Request failed on Windows!' }"
+          wsl -u root bash -c "curl -sS -I --fail --max-time 15 https://1.1.1.1 || echo 'Request failed on WSL!'"
 
       - name: Test Viridian Reef PORT (integration) 🧪
         id: test-viridian-reef-port
