--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,7 +79,7 @@ jobs:
       SPECIAL_ADDRESS: 168.63.129.16
       SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
       SUDO: ${{ matrix.os == 'ubuntu' && 'sudo -E env "PATH=$PATH"' || '' }}
-      TEST: ${{ matrix.os == 'ubuntu' && 'curl -sS -I --fail --max-time 15 https://1.1.1.1' || 'sh -c "curl -sS -I --fail --max-time 15 https://1.1.1.1"' }}
+      TEST: ${{ matrix.os == 'ubuntu' && 'curl -sS -I --fail --max-time 15 https://1.1.1.1' || 'sh -c \"curl -sS -I --fail --max-time 15 https://1.1.1.1\"' }}
     strategy:
       fail-fast: false
       matrix:
