--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -128,7 +128,7 @@ jobs:
         working-directory: viridian/reef
         env:
           WINDIVERT_PATH: ${{ github.workspace }}/viridian/reef/windivert-bin
-        run: ${{ env.SUDO }} cargo run --features cli-exec --bin cli -- -s port -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-addresses ${{ env.TARGET_ADDRESS }} --exempt-addresses ${{ env.SPECIAL_ADDRESS }} -e "${{ env.TEST }}"
+        run: ${{ env.SUDO }} cargo run --features cli-exec --bin cli -- -s port -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-addresses ${{ env.TARGET_ADDRESS }} --exempt-addresses ${{ env.SPECIAL_ADDRESS }} -e "Invoke-WebRequest -Uri 'https://1.1.1.1' 2>&1 | Select-Object -ExpandProperty Exception | Format-List -Force"
 
       - name: Test Viridian Reef TYPHOON (integration) 🧪
         id: test-viridian-reef-typhoon
