--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,11 +116,11 @@ jobs:
 
       - name: TEST STEP  # TODO: remove!
         if: runner.os == 'Windows'
-        shell: bash
         run: |
-          nohup ${{ env.WINDIVERT_PATH }}/netdump "true" 1024 > facets.txt 2>&1 &
-          powershell -Command "try { Invoke-WebRequest -Uri https://1.1.1.1 -Method Head -TimeoutSec 15 -ErrorAction Stop } catch { Write-Host 'Request failed on Windows!' }"
+          Start-Process -FilePath "${{ env.WINDIVERT_PATH }}/netdump" -ArgumentList "true", "1024" -RedirectStandardOutput "./facets.txt"
+          try { Invoke-WebRequest -Uri https://1.1.1.1 -Method Head -TimeoutSec 15 -ErrorAction Stop } catch { Write-Host 'Request failed on Windows!' }
           wsl -u root bash -c "curl -sS -I --fail --max-time 15 https://1.1.1.1 || echo 'Request failed on WSL!'"
+          Get-Content "./facets.txt"
 
       - name: Test Viridian Reef PORT (integration) 🧪
         id: test-viridian-reef-port
