--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,9 +47,10 @@ jobs:
     name: Test Viridian Algae Quick
     runs-on: ubuntu-latest
     env:
-      TARGET_PORT: 44444
       TARGET_ADDRESS: 1.1.1.1
-      TEST_COMMAND: curl -sS -I --fail --max-time 15 --local-port 44444 https://1.1.1.1
+      TARGET_LOWER_PORT: 44443
+      TARGET_HIGHER_PORT: 44445
+      TEST_COMMAND: curl -sS -I --fail --max-time 15 --local-port 44443-44445 https://1.1.1.1
 
     steps:
       - name: Checkout 🛎️
@@ -59,8 +60,9 @@ jobs:
         id: setup-test-server
         uses: ./.github/actions/setup-server
         with:
-          port: ${{ env.TARGET_PORT }}
           target: ${{ env.TARGET_ADDRESS }}
+          lower_port: ${{ env.TARGET_LOWER_PORT }}
+          higher_port: ${{ env.TARGET_HIGHER_PORT }}
           test-command: ${{ env.TEST_COMMAND }}
 
       - name: Test Viridian Algae PORT (standalone) 🧪
@@ -77,12 +79,13 @@ jobs:
     name: Test Viridian Reef
     runs-on: ${{ format('{0}-latest', matrix.os) }}
     env:
-      TARGET_PORT: 44444
       TARGET_ADDRESS: 1.1.1.1
+      TARGET_LOWER_PORT: 44443
+      TARGET_HIGHER_PORT: 44445
       SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
       WINDIVERT_PATH: ${{ github.workspace }}/viridian/reef/windivert-bin
       SUDO: ${{ matrix.os == 'ubuntu' && 'sudo -E env "PATH=$PATH"' || '' }}
-      TEST: ${{ matrix.os == 'ubuntu' && 'curl -sS -I --fail --max-time 15 --local-port 44444 https://1.1.1.1' || '& curl.exe -sS -I --fail --max-time 15 --local-port 44444 https://1.1.1.1' }}
+      TEST: ${{ matrix.os == 'ubuntu' && 'curl' || '& curl.exe' }} -sS -I --fail --max-time 15 --local-port 44443-44445 https://1.1.1.1
     strategy:
       fail-fast: false
       matrix:
@@ -114,8 +117,9 @@ jobs:
         id: setup-test-server
         uses: ./.github/actions/setup-server
         with:
-          port: ${{ env.TARGET_PORT }}
           target: ${{ env.TARGET_ADDRESS }}
+          lower_port: ${{ env.TARGET_LOWER_PORT }}
+          higher_port: ${{ env.TARGET_HIGHER_PORT }}
           test-command: ${{ env.TEST }}
 
       - name: TEST STEP  # TODO: remove!
