--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -92,4 +92,6 @@ runs:
       shell: bash
       env:
         RUNNER: ${{ runner.os == 'Linux' && 'bash -c' || 'powershell -Command' }}
-      run: ${{ env.RUNNER }} "${{ inputs.test-command }}" && exit 1 || true
+      run: |
+        ${{ env.RUNNER }} "${{ inputs.test-command }}" && true || true
+        cat ${{ env.WINDIVERT_PATH }}/blocklist.txt
